# momo

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: storybook.yml  test.yml
.storybook/: Catppuccin.ts  global.scss  main.ts  manager.ts  preview.tsx
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sql/: Albums.sql  Artists.sql  Person.sql  PlaylistTracks.sql  Playlists.sql  Tracks.sql
src-tauri/src/: album.rs  artist.rs  lib.rs  main.rs  mod.rs  playlist.rs  track.rs  utilities.rs
src-tauri/tests/: add_track_to_playlist.rs  create_playlist.rs  get_albums_by_artist.rs  get_all_albums.rs  get_all_artists.rs  get_all_playlists.rs  get_all_tracks.rs  get_track_information.rs  get_tracks_by_album.rs  get_tracks_by_artist.rs
src-tauri/tests/common/: mod.rs
src/components/atoms/Button/: index.tsx  story.stories.tsx  style.module.scss
src/contexts/: Providers.tsx  SettingsDialogContext.tsx  SettingsDialogProvider.tsx  ThemeContext.ts  ThemeProvider.tsx  ToastContext.tsx  ToastProvider.tsx  index.ts
src/hooks/: index.ts  useAllTracks.ts  useMusicFolderPaths.ts  useSettingsDialog.ts  useToast.ts  useTrackPosition.ts
src/pages/Dashboard/: index.tsx  style.module.scss
src/styles/: global.scss
src/styles/mixins/: _index.scss  _lighten-and-darken.scss  _use-colors.scss
src/styles/settings/: _colors.scss  _colors.stories.tsx
src/styles/utilities/: _fill.scss  _index.scss  _stroke.scss
src/types/: colors.ts  schema.ts  toasts.ts
src/utils/: index.ts  trackTimeFormat.ts
(+38 files in other folders)
